--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud image">
         <h1>I'm Dominik</h1>
-        <h2>a <span class="underline">web</span> developer</h2>
+        <h2>a <span class="underline">web</span> developer and a <span class="underline">marketing</span> specialist
+        </h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
-        <img src="images/mountain.png" alt="mountaing image">
+        <img class="thumbnail-image" src="images/cactus.png" alt="mountaing image">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img class="profile-image" src="images/me.png" alt="me">
+            <img class="profile-image" src="images/me.jpg" alt="me">
             <h2>Hello.</h2>
-            <p class="profile-description">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
+            <p class="profile-description">I am a political science major, marketing specialist and a programming enthusiast. I focus on
+                front-end development both on the web and for iOS.
             </p>
         </div>
         <hr class="horizontal">
@@ -32,20 +34,43 @@
             <div class="skill-row">
                 <img class="skill-image-left" src="images/code.png" alt="web development">
                 <h3>Web development</h3>
-                <p class="skill-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
-                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                <p class="skill-description">On front-end, I mostly work with vanilla HTML, CSS and JavaScript. Combining this
+                    with both front-end and back-end
+                    frameworks such as JQuery, Node.js, REST and many others gives me plenty of flexibility when
+                    developing full-stack web applications.</p>
             </div>
             <div class="skill-row">
                 <img class="skill-image-right" src="images/smartphone.png" alt="golf">
                 <h3>Mobile development</h3>
-                <p class="skill-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis
-                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                <p class="skill-description">When developing mobile apps, I try to use as much of native code as
+                    possible. Apples' Swift, combined with UIKit and, lately, SwiftUI is an awesome basis for any app
+                    you need.
+                </p>
+                <blockquote class="twitter-tweet">
+                    <p lang="en" dir="ltr">Building UI with <a
+                            href="https://twitter.com/Apple?ref_src=twsrc%5Etfw">@Apple</a>’s <a
+                            href="https://twitter.com/hashtag/SwiftUI?src=hash&amp;ref_src=twsrc%5Etfw">#SwiftUI</a> is
+                        just an experience from another world. Here is a time lapse from my attempt to recreate the <a
+                            href="https://twitter.com/instagram?ref_src=twsrc%5Etfw">@instagram</a> ui. Thanks goes to
+                        <a href="https://twitter.com/letsbuildthatap?ref_src=twsrc%5Etfw">@letsbuildthatap</a> for his
+                        <a href="https://twitter.com/hashtag/SwiftUI?src=hash&amp;ref_src=twsrc%5Etfw">#SwiftUI</a>
+                        lessons on <a href="https://twitter.com/YouTube?ref_src=twsrc%5Etfw">@YouTube</a>. (Hope <a
+                            href="https://twitter.com/seanallen_dev?ref_src=twsrc%5Etfw">@seanallen_dev</a> will upload
+                        some soon?) <a href="https://t.co/MydfQcaPJp">pic.twitter.com/MydfQcaPJp</a></p>&mdash; Dominik
+                    Grodl (@Dominik_grodl) <a
+                        href="https://twitter.com/Dominik_grodl/status/1139331317663981569?ref_src=twsrc%5Etfw">June 14,
+                        2019</a>
+                </blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="skill-row">
                 <img class="skill-image-left" src="images/marketing.png" alt="web development">
                 <h3>Marketing</h3>
-                <p class="skill-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
-                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                <p class="skill-description">When on university, I got the opportunity to work on many projects as an
+                    marketing specialist.
+                    Some of them involved verry little online marketing, some of them, on the other hand, were part of
+                    massive campaigns. This gave me the opportunity to work with some of the latest marketing tools and
+                    platforms, such as Google ad services, Facebook ad client and much more.</p>
             </div>
         </div>
         <hr class="horizontal">
@@ -53,17 +78,17 @@
             <h2>Get In Touch</h2>
             <h3>I am free to hire!</h3>
             <p>As a freelancer, I am always looking for new opportunities to develop. If you have any project where you
-                need help with web or mobile development or marketing, feel free to contact me!</p>
-            <a class="btn" href="mailto:dominikgrodl@icloud.com">CONTACT ME</a>
+                need help with web or mobile development or marketing, feel free to <span> <a class="btn"
+                        href="mailto:dominikgrodl@icloud.com">contact me!</a></span></p>
         </div>
     </div>
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/dominik-grodl-6a8327125/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/dominik_grodl">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p class="copyright">© 2020 Dominik Grodl.</p>
+        <div class="links"><a class="footer-link" href="https://www.linkedin.com/in/dominik-grodl-6a8327125/">LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/dominik_grodl">Twitter</a>
+            <a class="footer-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">I'm sorry</a></div>
+        <p class="copyright">Copyright © 2020 Dominik Grodl.</p>
     </div>
 </body>
 
